--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
-  <!-- 모바일 퍼스트 뷰포트 -->
+  <!-- ① 모바일 퍼스트 뷰포트 -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GAIA 모의고사 복습 사이트</title>
   <style>
@@ -29,13 +29,13 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
-    /* 지구본 이미지 회전 애니메이션 */
+    /* 지구본 이미지 회전 애니메이션 및 크기 조정 */
     img.rotating {
       display: block;
-      width: 60%;
-      max-width: 200px;
-      margin: 0.5rem auto 1rem;
-      animation: spin 4s linear infinite;
+      width: 40%;
+      max-width: 150px;
+      margin: 0.5rem auto 2rem;
+      animation: spin 8s linear infinite;
     }
     @keyframes spin {
       from { transform: rotate(0deg); }
@@ -65,15 +65,19 @@
 </head>
 <body>
   <div class="container">
+    <!-- ① 제목 변경 -->
     <h1>GAIA 모의고사 복습 사이트</h1>
-    <img src="/globe.gif" alt="Globe" class="rotating">
+    <!-- ② 지구본 움짤: frontend/globe.gif -->
+    <img src="globe.gif" alt="Globe" class="rotating">
 
+    <!-- 로그인 섹션 -->
     <div id="loginSection">
       <input type="text" id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
 
+    <!-- 회차 선택 섹션 -->
     <div id="examSection" style="display:none;">
       <h2>회차 선택</h2>
       <select id="examSelect"></select>
@@ -85,6 +89,7 @@
   <script>
     let currentId = '';
 
+    // 1) 로그인
     document.getElementById('loginBtn').onclick = () => {
       const id = document.getElementById('loginId').value.trim();
       if (!id) {
@@ -92,7 +97,7 @@
         return;
       }
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
-        .then(res => res.json().then(j=>({ok: res.ok, ...j})))
+        .then(res => res.json().then(j => ({ok: res.ok, ...j})))
         .then(data => {
           if (data.authenticated) {
             currentId = id;
@@ -108,6 +113,7 @@
         });
     };
 
+    // 2) 시험 목록 로드
     function loadExams() {
       fetch('/api/exams')
         .then(res => res.json())
@@ -125,10 +131,11 @@
         });
     }
 
+    // 3) 응시 여부 체크
     document.getElementById('examBtn').onclick = () => {
       const exam = document.getElementById('examSelect').value;
       fetch(`/api/check_exam?exam=${encodeURIComponent(exam)}&id=${encodeURIComponent(currentId)}`)
-        .then(res => res.json().then(j=>({ok: res.ok, ...j})))
+        .then(res => res.json().then(j => ({ok: res.ok, ...j})))
         .then(data => {
           if (data.registered) {
             alert(`"${exam}" 응시 정보 확인됨. 문제풀이 서비스로 이동합니다.`);
