--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,12 +44,13 @@
       color: white;
       border: none;
     }
-    /* GIF 이미지: 회전 삭제, 제목과 입력 사이로 이동 */
+    /* GIF 이미지: 제목과 입력 사이로 이동, 왼쪽으로 약간 이동, 간격 확대 */
     img.static {
       display: block;
       width: 40%;
       max-width: 150px;
-      margin: 0.75rem auto;
+      margin: 0.75rem auto 1.5rem;
+      transform: translateX(-10%);
     }
     p.error {
       color: #d00;
